--- a/appview/pages/templates/repo/fragments/filetree.html
+++ b/appview/pages/templates/repo/fragments/filetree.html
@@ -2,9 +2,9 @@
   {{ if and .Name .IsDirectory }}
     <details open>
       <summary class="cursor-pointer list-none pt-1">
-        <span class="inline-flex items-center gap-2 ">
-          {{ i "folder" "w-3 h-3 fill-current" }}
-          <span class="text-black dark:text-white">{{ .Name }}</span>
+        <span class="tree-directory inline-flex items-center gap-2 ">
+          {{ i "folder" "size-4 fill-current" }}
+          <span class="filename text-black dark:text-white">{{ .Name }}</span>
         </span>
       </summary>
       <div class="ml-1 pl-4 border-l border-gray-200 dark:border-gray-700">
@@ -14,9 +14,9 @@
       </div>
     </details>
   {{ else if .Name }}
-    <div class="flex items-center gap-2 pt-1">
-      {{ i "file" "w-3 h-3" }}
-      <a href="#file-{{ .Path }}" class="text-black dark:text-white no-underline hover:underline">{{ .Name }}</a>
+    <div class="tree-file flex items-center gap-2 pt-1">
+      {{ i "file" "size-4" }}
+      <a href="#file-{{ .Path }}" class="filename text-black dark:text-white no-underline hover:underline">{{ .Name }}</a>
     </div>
   {{ else }}
     {{ range $child := .Children }}
