--- a/appview/pages/templates/repo/tree.html
+++ b/appview/pages/templates/repo/tree.html
@@ -54,7 +54,7 @@
         <div class="flex justify-between items-center">
             <a href="/{{ $.BaseTreeLink }}/{{ .Name }}" class="{{ $linkstyle }}">
                 <div class="flex items-center gap-2">
-                  {{ i "folder" "w-3 h-3 fill-current" }}{{ .Name }}
+                  {{ i "folder" "size-4 fill-current" }}{{ .Name }}
                 </div>
             </a>
             <time class="text-xs text-gray-500 dark:text-gray-400">{{ timeFmt .LastCommit.When }}</time>
@@ -69,7 +69,7 @@
         <div class="flex justify-between items-center">
             <a href="/{{ $.BaseBlobLink }}/{{ .Name }}" class="{{ $linkstyle }}">
                 <div class="flex items-center gap-2">
-                  {{ i "file" "w-3 h-3" }}{{ .Name }}
+                  {{ i "file" "size-4" }}{{ .Name }}
                 </div>
             </a>
             <time class="text-xs text-gray-500 dark:text-gray-400">{{ timeFmt .LastCommit.When }}</time>
