appview: user/repos: introduce "all repos" page

--- a/appview/pages/templates/user/fragments/editBio.html
+++ b/appview/pages/templates/user/fragments/editBio.html
@@ -1,6 +1,6 @@
 {{ define "user/fragments/editBio" }}
   <form
-    hx-post="/{{ .LoggedInUser.Did }}/profile/bio"
+    hx-post="/profile/bio"
     class="flex flex-col gap-4 my-2 max-w-full"
     hx-disabled-elt="#save-btn,#cancel-btn"
     hx-swap="none">
