appview: add missing shadows to few components

--- a/appview/pages/templates/repo/fragments/cloneInstructions.html
+++ b/appview/pages/templates/repo/fragments/cloneInstructions.html
@@ -4,7 +4,7 @@
         {{ $knot = "tangled.sh" }}
     {{ end }}
     <section
-        class="mt-4 p-6 rounded bg-white dark:bg-gray-800 dark:text-white w-full mx-auto overflow-auto flex flex-col gap-4"
+        class="mt-4 p-6 rounded drop-shadow-sm bg-white dark:bg-gray-800 dark:text-white w-full mx-auto overflow-auto flex flex-col gap-4"
     >
         <div class="flex flex-col gap-2">
             <strong>push</strong>
