--- a/appview/pages/templates/layouts/footer.html
+++ b/appview/pages/templates/layouts/footer.html
@@ -1,5 +1,5 @@
 {{ define "layouts/footer" }}
-<div class="w-full p-4 bg-white dark:bg-gray-800 rounded-t">
+<div class="w-full p-4 bg-white dark:bg-gray-800 rounded-t drop-shadow-sm">
     <div class="container mx-auto text-center text-gray-600 dark:text-gray-400 text-sm">
         <span class="font-semibold italic">tangled</span> &mdash; made by <a href="/@oppi.li">@oppi.li</a> and <a href="/@icyphox.sh">@icyphox.sh</a>
     </div>
