appview: oauth/handler: implement logout

--- a/appview/pages/templates/user/login.html
+++ b/appview/pages/templates/user/login.html
@@ -27,9 +27,9 @@
                 </h2>
                 <form
                     class="mt-4 max-w-sm mx-auto"
-                    hx-post="/oauth/login"
+                    hx-post="/login"
                     hx-swap="none"
-                    hx-disabled-elt="this"
+                    hx-disabled-elt="#login-button"
                 >
                     <div class="flex flex-col">
                         <label for="handle">handle</label>
